--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
         <div class="container navbr">
             
             <h4><b>NEWS UPDATES</b></h4>
-            <h5 class="text-center"> Get the latest news updates </h5>
+            <h5 class="text-center"> Get the latest news update </h5>
              
         </div>
 
