added heading in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-12">
                     <div class="list-group list-group-flush">
-                            <!-- <h3 class="News"> Up To Date-News-Updates</h3> -->
+                            <h3 class="News"> Up To Date-News-Updates</h3>
                             <br>
                             <div class="updates">
                               {% for general_category in general %}
